Doc/force-app/main/default/objects/Campaign/fields/Active_Campaign_Owner__c.field-meta.xml
<CustomField>
    <fullName>Active_Campaign_Owner__c</fullName>
    <formula>Owner.IsActive</formula>
    <label>Active Campaign Owner</label>
    <type>Checkbox</type>
</CustomField>