Doc/force-app/main/default/objects/Campaign/fields/Actual_Responses__c.field-meta.xml
<CustomField>
    <fullName>Actual_Responses__c</fullName>
    <formula>IF( NumberOfContacts &gt; 0, 
NumberOfResponses / NumberOfContacts, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Responses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>