Doc/force-app/main/default/objects/Campaign/fields/Audience_Focus__c.field-meta.xml
<CustomField>
    <fullName>Audience_Focus__c</fullName>
    <description>ticket # 37318</description>
    <label>Audience Focus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leaders &amp; Partners</fullName>
            </value>
            <value>
                <fullName>Marketing/BD</fullName>
            </value>
            <value>
                <fullName>CIO/IT</fullName>
            </value>
            <value>
                <fullName>Finance/Practice Mgmt</fullName>
            </value>
            <value>
                <fullName>Risk &amp; Compliance</fullName>
            </value>
            <value>
                <fullName>Accounting/Consulting</fullName>
            </value>
            <value>
                <fullName>Investment Banking</fullName>
            </value>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
                <label>Cross-Audience</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Knowledge Mgmt</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>