Doc/force-app/main/default/objects/Campaign/fields/Campaign_Count__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Campaign Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>