Doc/force-app/main/default/objects/Campaign/fields/Intapp_Campaign_Number__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Campaign_Number__c</fullName>
    <description>This is a human-readable, case-insensitive unique number to identify each Campaign record.</description>
    <displayFormat>Campaign-{000000}</displayFormat>
    <inlineHelpText>Unique identifier for the Campaign</inlineHelpText>
    <label>Intapp Campaign Number</label>
    <type>AutoNumber</type>
</CustomField>