Doc/force-app/main/default/objects/Campaign/fields/Leads_in_Campaign_Custom__c.field-meta.xml
<CustomField>
    <fullName>Leads_in_Campaign_Custom__c</fullName>
    <formula>NumberOfLeads - NumberOfConvertedLeads</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads in Campaign(Custom)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>