Doc/force-app/main/default/objects/Campaign/fields/Parent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Parent_Campaign__c</fullName>
    <description>For reporting, created as part of Ticket# 18325</description>
    <formula>Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Campaign</label>
    <type>Text</type>
</CustomField>