Doc/force-app/main/default/objects/Campaign/fields/Product_Migration_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Product_Migration_Placeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Migration Placeholder</label>
    <referenceTo>Product_Migration_Placeholder__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>