Doc/force-app/main/default/objects/Campaign/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reputation/Awareness</fullName>
            </value>
            <value>
                <fullName>Funnel Development/Velocity</fullName>
            </value>
            <value>
                <fullName>Customer Expansion/Advocacy</fullName>
            </value>
            <value>
                <fullName>Customer Success (CSM only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>