Doc/force-app/main/default/objects/Campaign/validationRules/No_Null_Dates_for_CampaignStatuses.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Null_Dates_for_CampaignStatuses</fullName>
    <active>true</active>
    <description>Checks for No blank End Dates on Campaigns when Status = &apos;Approved&apos;, &apos;In Progress&apos;, &apos;Completed&apos; for New campaigns or if the status is changed.</description>
    <errorConditionFormula>AND( 
$User.ProfileId != &quot;00e30000000bvR3&quot;, /* System Administrator*/ 
OR( 
ISPICKVAL(Status , &quot;Approved&quot;), 
ISPICKVAL(Status , &quot;In Progress&quot;), 
ISPICKVAL(Status , &quot;Completed&quot;) 
), 
OR( 
ISNEW(), 
ISCHANGED(Status) 
), 
ISBLANK(EndDate) 
)</errorConditionFormula>
    <errorDisplayField>EndDate</errorDisplayField>
    <errorMessage>Campaign End Date cannot be NULL for Campaign Status = &apos;Approved&apos; OR &apos;In Progress&apos; OR &apos;Completed&apos;</errorMessage>
</ValidationRule>