Doc/force-app/main/default/objects/Campaign/validationRules/Status_Field_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Field_Mandatory</fullName>
    <active>true</active>
    <description>Status field must be filled.</description>
    <errorConditionFormula>ISPICKVAL(Status , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Please select the status of Campaign; Campaign status cannot be Null OR Blank.</errorMessage>
</ValidationRule>