Doc/force-app/main/default/objects/Campaign/listViews/Active_Campaign_Cleanup.listView-meta.xml
<ListView>
    <fullName>Active_Campaign_Cleanup</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Campaign Cleanup</label>
    <language>en_US</language>
    <sharedTo>
        <role>Marketing</role>
    </sharedTo>
</ListView>