Doc/force-app/main/default/objects/Campaign/listViews/All_In_progress_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_In_progress_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <filters>
        <field>Audience_Focus__c</field>
        <operation>contains</operation>
        <value>Risk</value>
    </filters>
    <label>All In-progress Campaigns</label>
    <language>en_US</language>
</ListView>