Doc/force-app/main/default/objects/Campaign/listViews/Campaign_Templates_Clone_to_Use.listView-meta.xml
<ListView>
    <fullName>Campaign_Templates_Clone_to_Use</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>Template_</value>
    </filters>
    <label>MKTG Campaign Templates - Clone to Use</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>DirectorProductMarketing</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Marketing</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Marketing_BD_Practice</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>VPMarketing</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>