Doc/force-app/main/default/objects/Campaign/listViews/CSM_Campaigns.listView-meta.xml
<ListView>
    <fullName>CSM_Campaigns</fullName>
    <booleanFilter>(1 OR 2) and 3</booleanFilter>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>contains</operation>
        <value>Customer Care (CSM only)</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>Cancellation,CSM</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>CSM Campaigns</label>
    <language>en_US</language>
    <sharedTo>
        <group>CRM</group>
    </sharedTo>
</ListView>