Doc/force-app/main/default/objects/Campaign/listViews/My_Campaigns1.listView-meta.xml
<ListView>
    <fullName>My_Campaigns1</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Barbara</value>
    </filters>
    <label>Barb&apos;s campaigns</label>
    <language>en_US</language>
</ListView>